--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 
     <string name="product_title">Назва</string>
     <string name="product_description">Опис</string>
+    <string name="empty_screen">іфва іфва фіа фіаф іав</string>
 </resources>
