--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="product_title">Назва</string>
     <string name="product_description">Опис</string>
     <string name="empty_screen">іфва іфва фіа фіаф іав</string>
+    <string name="logo_image_desc">Логотип</string>
 </resources>
